--- a/team-builder/src/App.css
+++ b/team-builder/src/App.css
@@ -36,3 +36,48 @@
     transform: rotate(360deg);
   }
 }
+
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin: auto;
+}
+label {
+  display: flex;
+  align-items:center;
+  justify-content: center;
+  font-size: 1.5rem;
+}
+input {
+  display: inline-block;
+  padding: 5px;
+  font-size: 1.5rem;
+  border: 2px solid gray;
+  border-radius: 5px;
+  width: 80%;
+  margin: 1% auto;
+}
+
+select {
+  font-size: 1.5rem;
+  margin: 2%;
+  padding: 5px;
+}
+
+button {
+  background-color: white;
+  border: 2px solid gray;
+  font-size: 1.5rem;
+  padding: 5px 15px;
+  border-radius: 10px;
+}
+
+.memberList {
+  display: flex;
+  flex-direction: column;
+  align-items:flex-start;
+  margin: 5%;
+  font-size: 1.5rem;
+}
